--- a/snipe-it.yml
+++ b/snipe-it.yml
@@ -20,7 +20,7 @@ services:
     volumes:
       - /root/snipe_it:/config
     environment:
-      - APP_URL=null
+      - APP_URL=http://localhost:8080
       - MYSQL_PORT_3306_TCP_ADDR=mysql
       - MYSQL_PORT_3306_TCP_PORT=3306
       - MYSQL_DATABASE=snipe
@@ -29,4 +29,4 @@ services:
       - PGID=1000
       - PUID=1000
     ports:
-      - "8084:80"
+      - "8080:80"
